--- a/项目进度.md
+++ b/项目进度.md
@@ -32,3 +32,12 @@
 
 - 向开一学习安卓搭建，布置下去安卓学习任务，搞明白安卓是如何和后台进行交互的
 
+##### 问题：
+
+语料库要分场景，哪些场景（枚举值），然后
+
+
+
+#### 4.29
+
+- 完成表的建设，探索Spring jpa orm框架的用法。
